# bluejays-takehome

./: README.md  pyproject.toml
app/: __init__.py  config.py  context_processors.py  extensions.py
app/blueprints/: __init__.py  leaders.py  main.py  players.py  standings.py  teams.py
app/services/: landing_data.py  mlb_stats.py  news_rss.py  player_page.py  team_page.py
app/static/css/: app.css
app/templates/: base.html
app/templates/pages/: index.html  leaders.html  player.html  standings.html  team.html
app/templates/partials/: leaderboard_section.html  navbar.html  player_career_table.html  standings_grid.html  stat_table_card.html
