[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project]
name = "bluejays-takehome"
version = "0.1.0"
description = "MLB news, standings, rosters, and statistics (take-home)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0,<4",
    "httpx>=0.27,<1",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/**/*", "static/**/*"]
